# Projeto-SO-Soma-Diagonais-com-Threads

./: CMakeLists.txt  Makefile.mak  MatrixDynmAlloc.c  PROJETO SO THREADS - DOC 1.docx  PROJETO SO THREADS - DOC 1_R.docx  Pasta1.xlsx  Thumbs.db  _infoData.csv  _threadEx.csv  data1.csv  data12.csv  datadefine.h  global.h  in.txt  infoData - Copia.csv  infoData.csv  main.c  main2.c  maindata.c  matrixDymnAlloc.h  med.csv  out.txt  out2.csv  projThreads.fpj  projThreads.layout  projeto-so-threads.rar  projso.fpj  projso.layout  readme.md  readme.txt  thrd.csv  threadEx.csv  time.csv  trash  ~$OJETO SO THREADS - DOC 1.docx
Delete/: arrayDymnAlloc.c  arrayDymnAlloc.h  dymns.c  stackDymnAlloc.c  stackDymnAlloc.h
Delete/Pthread_Test/: PthreadTest.fpj  PthreadTest.layout  main.c
Fotos execução algorítmo/Info/: info.txt
Programa/: Projeto.layout  datadefine.h  main.c  out_method_A.txt  projso.fpj  projso.layout
Programa/file/: fileMngr.c
Programa/thread/: thread.c
Programa/util/: util.c  util.h
Programa_soma/: main.c
Programa_soma/util/: util.c
Projeto/: projeto.txt
Pthread_Test/: Makefile.mak  NovoArquivo.c  PthreadTest.fpj
dataDefine/: arrayDescriber.h  matrixDescriber.h  threadArgsInfo.h  udata.h
dataStructures/: arrayDymnAlloc.c  arrayDymnAlloc.h  matrixDymnAlloc.c  matrixDymnAlloc.h
dataStructures/array/: arrayMngr.c  arrayMngr.h
file/: fileMngr.c  fileMngr.h
files/: matrixInput.c  matrixInput.h
matrix/: matrixDymnAlloc.c  matrixDymnAlloc.h
thread/: callThread.c  callThread.h  thread.c  thread.h
util/: util.c  util.h
(+8 files in other folders)
